[gd_scene load_steps=6 format=2]

[ext_resource path="res://designer/load_vehicle.gd" type="Script" id=1]



[sub_resource type="InputEventAction" id=1]
action = "ui_cancel"

[sub_resource type="ShortCut" id=2]
shortcut = SubResource( 1 )

[sub_resource type="InputEventAction" id=3]
action = "ui_accept"

[sub_resource type="ShortCut" id=4]
shortcut = SubResource( 3 )

[node name="LoadVehicle" type="CenterContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="."]
margin_left = 760.0
margin_top = 390.0
margin_right = 1160.0
margin_bottom = 690.0
rect_min_size = Vector2( 400, 300 )

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 393.0
margin_bottom = 293.0

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer"]
margin_right = 386.0
margin_bottom = 14.0
text = "Load Vehicle"
align = 1

[node name="Name" type="Label" parent="PanelContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 386.0
margin_bottom = 32.0

[node name="PanelContainer" type="PanelContainer" parent="PanelContainer/VBoxContainer"]
margin_top = 36.0
margin_right = 386.0
margin_bottom = 262.0
size_flags_vertical = 3

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainer/VBoxContainer/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 379.0
margin_bottom = 219.0
scroll_vertical_enabled = false

[node name="Files" type="VBoxContainer" parent="PanelContainer/VBoxContainer/PanelContainer/ScrollContainer"]
margin_right = 372.0
margin_bottom = 20.0
size_flags_horizontal = 3

[node name="Template" type="Button" parent="PanelContainer/VBoxContainer/PanelContainer/ScrollContainer/Files"]
margin_right = 372.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "Vehicle name"
align = 0

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
margin_top = 266.0
margin_right = 386.0
margin_bottom = 286.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cancel" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer"]
margin_right = 191.0
margin_bottom = 20.0
size_flags_horizontal = 3
shortcut = SubResource( 2 )
text = "Cancel"

[node name="Load" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer"]
margin_left = 195.0
margin_right = 386.0
margin_bottom = 20.0
size_flags_horizontal = 3
shortcut = SubResource( 4 )
text = "Load"
[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer/Cancel" to="." method="emit_signal" binds= [ "cancel" ]]
[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer/Load" to="." method="_on_Load_pressed"]
